hphp/hack/test/typecheck/runtime_generic_bad.php.exp
File "runtime_generic_bad.php", line 4, characters 10-10:
Erased generics can only be used in type hints because they do not exist at runtime. (Typing[4124])
File "runtime_generic_bad.php", line 4, characters 13-15:
You are trying to access the static property `foo` but this is a value of generic type T (Typing[4252])
File "runtime_generic_bad.php", line 4, characters 10-10:
Definition is here
